# api-webhook-bridge

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  repo-metadata.json
.github/workflows/: ci.yml
configs/mappings/: hubspot-contact-to-airtable.json  shopify-order-to-slack-crm.json  stripe-payment-to-audit-slack.json
docs/: api.md  automation-kit-backbone.md  automation-kit-case-study-contract.md  case-study.md  evidence.md  first-milestone.md  production-path.md  public-readiness-checklist.md  sandbox-walkthrough.md
docs/screenshots/: README.md
examples/: run-sandbox-walkthrough.sh
examples/api-requests/: README.md
examples/api-responses/: audit-events.json  dead-letter-response.json  dead-letter.json  health.json  hubspot-contact-response.json  integrations.json  mappings.json  shopify-order-response.json  stripe-payment-duplicate-response.json  stripe-payment-response.json
examples/input/: contact-created-invalid.json  contact-created.json  shopify-order-created.json  stripe-payment-succeeded.json
scripts/: capture_screenshots.py  verify_sandbox_responses.py
src/api_webhook_bridge/: __init__.py  api.py  audit.py  backbone.py  bridge.py  idempotency.py  mapping.py
tests/: test_api.py  test_audit.py  test_automation_kit_contract.py  test_bridge.py  test_dead_letter.py  test_idempotency.py  test_mapping.py  test_screenshots.py
